apps/base/n8n/10-ingress-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: n8n
spec:
  redirectScheme:
    scheme: https
    permanent: true
