apps/base/n8n/09-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.k8s.tommahs.nl`)
      priority: 10
      services:
        - kind: Service
          name: n8n
          namespace: n8n
          passHostHeader: true
          port: 5678
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: n8n-k8s-tommahs-nl-tls
